deprecation fixes